# allegra

./: .gitignore  Cargo.toml  Procfile  README.md  build.rs  clean_ip_tables.sh  config.toml  deny.toml  flake.nix  install.sh  list.txt  overlay.nix  package.nix  pd.logs  sample-lxc-info.json  start-pd-server.sh  start-tikv-server.sh  user-data.yaml
proto/: allegra_rpc.proto
src/: account.rs  broker_service.rs  cli.rs  client.rs  cluster.rs  consts.rs  expose.rs  fs_monitor_service.rs  grpc.rs  grpc_light.rs  helpers.rs  lib.rs  light_server.rs  main.rs  network_service.rs  node.rs  params.rs  payload_impls.rs  publish.rs  quorum.rs  quorum_service.rs  rpc.rs  server.rs  startup.rs  state.rs  state_service.rs  statics.rs  subscribe.rs  vm_info.rs  vm_types.rs  vmm.rs  vmm_service.rs
src/actors/: mod.rs  state_actor.rs
src/broker/: broker.rs  event.rs  mod.rs
src/cli/: cli.rs  commands.rs  helpers.rs  mod.rs
src/cloud_init/: mod.rs
src/core/: grpc.rs  mod.rs  state.rs  vmm.rs
src/core/vmm/: distro.rs  domain.rs  mod.rs  prepare.rs  types.rs  virt_install.rs  vm_manager.rs
src/core/vmm/templates/: glusterfs-sync.service  glusterfs-sync.sh  network-config.yaml  user-data.yaml
src/events/: event.rs
src/helpers/: consts.rs  expose.rs  helpers.rs  mod.rs  startup.rs  statics.rs
src/lxc/: cluster.rs  remote.rs  vmm.rs
src/network/: client.rs  cluster.rs  dht.rs  mod.rs  node.rs  peer.rs  quorum.rs  voting.rs
src/pubsub/: mod.rs  publish.rs  subscribe.rs
src/traits/: mod.rs  payload_impls.rs
src/types/: account.rs  mod.rs  params.rs  vm_info.rs  vm_types.rs
