[package]
name = "allegra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
tarpc = { version = "0.34.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
virt = { version = "0.3.1", features = ["qemu"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["cbor", "messagepack", "bincode", "json"] }
lxc = "0.8.0"
lxc-sys = "0.5.0"
anyhow = "1.0"
futures = "0.3"
log = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
tikv-client = "0.3.0"
