[package]
name = "allegra"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[features]
default = ["grpc"]
grpc = []
tarpc = []
bootstrap = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "cli"
path = "src/cli/cli.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "light_server"
path = "src/light_server.rs"

[[bin]]
name = "vmm"
path = "src/vmm_service.rs"

[[bin]]
name = "monitor"
path = "src/fs_monitor_service.rs"

[[bin]]
name = "broker"
path = "src/broker_service.rs"

[[bin]]
name = "state"
path = "src/state_service.rs"

[[bin]]
name = "quorum"
path = "src/quorum_service.rs"

[[bin]]
name = "network"
path = "src/network_service.rs"

[dependencies]
tarpc = { version = "0.34.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
virt = { version = "0.3.1", features = ["qemu"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["cbor", "messagepack", "bincode", "json"] }
anyhow = "1.0"
futures = "0.3"
log = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
tikv-client = "0.3.0"
async-trait = "0.1.80"
hex-literal = "0.4.1"
hex = "0.4.3"
sha3 = "0.10.8"
anchorhash = "0.2.2"
ractor = { version = "0.10.3", features = ["async-std", "cluster", "async-trait"] }
ractor_cluster_derive = "0.10.3"
ractor_cluster = "0.10.3"
lru = "0.12.3"
secp256k1 = { version = "0.29.0", features = ["rand-std", "hashes-std", "serde", "global-context", "hashes", "lowmemory", "recovery"]}
ethers-core = "2.0.13"
bip39 = "2.0.0"
simple_logger = "4.3.0"
ssh2 = "0.9.4"
reqwest = "0.12.4"
warp = "0.3.7"
lazy_static = "1.4.0"
tonic = "0.11.0"
prost = "0.12.6"
termion = { version = "4.0.0", features = ["serde"] }
tower = { version = "0.4.13", features = ["full"] }
uuid = { version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
async-recursion = "1.1.1"
base64 = "0.22.1"
geolocation = "0.2.1"
haversine = "0.2.1"
rand = "0.8.5"
serde_yml = "0.0.10"
derive_builder = "0.20.0" 
libretto = { git = "https://github.com/versatus/libretto" }
tonic-reflection = "0.11.0"
conductor = { git = "https://github.com/versatus/conductor" }
derive_more = "0.99.18"
rayon = "1.10.0"
tokio-rayon = "2.1.0"
getset = "0.1.2"
derive-new = "0.6.0"

[build-dependencies]
tonic-build = "0.11.0"
